--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header .menu_side,
 
 }
 header .song_side {
-    width:75%;
+    width:100%;
     background:#0b1320;
 }
 header .master_play{
@@ -701,3 +701,12 @@ border-radius:20px;
                                     height: 100%;
                                     border-radius: 50%;
                                      }
+                        @media only screen and (max-width: 900px) {
+    header {
+        display: flex;
+        flex-direction: row;
+     }
+     .menu_side{
+        margin-left: -100px;
+     }
+
