--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 body { 
     font-family: 'poppins', sans-serif;
-    width: 100;
+    width: 100%;
     height: 120vh;
     background: #121213;
     display: grid;
@@ -406,12 +406,14 @@ header .song_side::before{
     width: 100%;
     height: 300px;
     background: url('images/download (1).jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     z-index: -1;
 }
 header .song_side nav{ 
     width: 90%;
     height: 10%;
-  /*  border: 1px solid#fff;*/
+  /*  border: 1px solid#fff;*/ 
     margin: auto;
     display: flex;
     align-items: center;
@@ -701,12 +703,29 @@ border-radius:20px;
                                     height: 100%;
                                     border-radius: 50%;
                                      }
-                        @media only screen and (max-width: 900px) {
+ @media only screen and (max-width: 900px) {
     header {
         display: flex;
         flex-direction: row;
      }
      .menu_side{
         margin-left: -100px;
+        padding-bottom: 30px;
      }
+     .master_play{
+        display: flex;
+        flex-wrap:wrap ;
+        justify-content: center;
+        padding-top: 50px;
+     }
+     .popular_artists{
+        padding-bottom:40px ;
+     }
+     .icon{
+        padding-bottom: 10px;
+     }
+     
+
+ }
+
 
